<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/l_icon"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:gravity="center|center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_lock_lock" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_nbr_msg"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="60"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:gravity="center|left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tx_box_nbr"
                style="@style/box_lst_nbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nbr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:gravity="center|left"
            android:orientation="vertical" >

            <TextView
                style="@style/box_lst_msg"
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:gravity="center|center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use" />
    </LinearLayout>

</LinearLayout>